4/k8s_v1/food-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: food-service-deployment
spec:
  replicas: 4                      # кількість екземплярів Pod, що буде створено цим Deployment
  selector:
    matchLabels:
      app: food-service               # селектор по якому Deployment зв'язаний з Pod
  template:
    metadata:
     labels:
       app: food-service               # мітка Pod по якому вона буде зв'язана з Deployment та Service
    spec:
      containers:
        - image: yarema2000/food-service-istio:0.2       # образ Docker
          imagePullPolicy: "IfNotPresent"
          name: food-service           # ім'я контейнеру
          ports:
            - containerPort: 8080  # порт по якому можна звертатись до поди
