4/k8s_v1/food-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: food-service-service
spec:
  type: ClusterIP      # тип доступу до сервісу, ClusterIp - значення за замовчуванням і може бути пропущене
  ports:
    - port: 80         # порт по якому можна звератись до сервісу
      targetPort: 8080 # порт контейнера
  selector:
    app: food-service      # селектор, всі Pod з даним селектором, будуть підключені до даного сервісу
